--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container mx-auto px-4">
             <h2 class="text-3xl font-bold text-center mb-8 text-yellow-400">About Me</h2>
             <p class="text-lg text-gray-300 max-w-3xl mx-auto text-center">
-                I'm a dedicated Python and Django developer with [X] years of experience building robust, scalable web applications. 
+                I'm a dedicated Python and Django developer with 3 years of experience building robust, scalable web applications. 
                 My passion lies in creating seamless, user-friendly solutions for clients in industries like e-commerce, finance, and real-time applications. 
                 I excel in backend development, RESTful API design, and database optimization, delivering clean, efficient code that drives business success.
             </p>
@@ -72,8 +72,8 @@
             <h2 class="text-3xl font-bold text-center mb-8 text-yellow-400">My Projects</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
                 <div class="bg-blue-900 p-6 rounded-lg shadow-md hover:shadow-xl transition transform hover:-translate-y-1">
-                    <h3 class="text-xl font-semibold mb-2 text-yellow-400">E-Commerce Platform</h3>
-                    <p class="text-gray-300">A Django-based online store with cart, payment integration, and user authentication.</p>
+                    <h3 class="text-xl font-semibold mb-2 text-yellow-400">QuizBash</h3>
+                    <p class="text-gray-300">QuizBash is a timed quiz app with scoring, admin controls, and interactive multiple-choice questions.</p>
                 </div>
                 <div class="bg-blue-900 p-6 rounded-lg shadow-md hover:shadow-xl transition transform hover:-translate-y-1">
                     <h3 class="text-xl font-semibold mb-2 text-yellow-400">Finance Dashboard</h3>
@@ -82,6 +82,19 @@
                 <div class="bg-blue-900 p-6 rounded-lg shadow-md hover:shadow-xl transition transform hover:-translate-y-1">
                     <h3 class="text-xl font-semibold mb-2 text-yellow-400">Job Board</h3>
                     <p class="text-gray-300">A job portal with user roles, job postings, and application management.</p>
+                </div>
+                <div class="bg-blue-900 p-6 rounded-lg shadow-md hover:shadow-xl transition transform hover:-translate-y-1">
+                    <h3 class="text-xl font-semibold mb-2 text-yellow-400">SessionXpert</h3>
+                    <p class="text-gray-300">A platform to manage internal learning sessions by registering employees and assigning topics for alternate Fridays and Saturdays.
+                    </p>
+                </div>
+                <div class="bg-blue-900 p-6 rounded-lg shadow-md hover:shadow-xl transition transform hover:-translate-y-1">
+                    <h3 class="text-xl font-semibold mb-2 text-yellow-400">NeuroTask</h3>
+                    <p class="text-gray-300">NeuroTask helps individuals and teams plan, track, and complete tasks efficiently for improved productivity.</p>
+                </div>
+                <div class="bg-blue-900 p-6 rounded-lg shadow-md hover:shadow-xl transition transform hover:-translate-y-1">
+                    <h3 class="text-xl font-semibold mb-2 text-yellow-400">ChatSphere</h3>
+                    <p class="text-gray-300">ChatSphere enables real-time messaging using Django Channels, supporting chat rooms, user accounts, and instant communication.</p>
                 </div>
             </div>
         </div>
