--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         <div class="container mx-auto px-4">
             <h2 class="text-3xl font-bold text-center mb-8 text-yellow-400">Contact Me</h2>
             <form action="https://formspree.io/f/mrbklgzn" method="POST" class="max-w-lg mx-auto bg-blue-800 p-8 rounded-lg shadow-md">
+                <input type="text" name="_gotcha" style="display:none">
                 <div class="mb-4">
                     <label for="name" class="block text-gray-300 mb-2">Name</label>
                     <input type="text" id="name" name="name" required class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
